--- a/Exercise3/css/style.css
+++ b/Exercise3/css/style.css
@@ -3,23 +3,24 @@
 @font-face {
     font-family: 'roboto';
     src: url(/fonts/Roboto-Bold.ttf);
-   
-   
+
+
 }
 
-@font-face{
+@font-face {
 
     font-family: 'roboto-regular';
     src: url(/fonts/Roboto-Regular.ttf);
-    
-}
-                                                    /* διαφορα font που θα χρησιμοποιηθουν σε ολες τις σελιδες */
 
-@font-face{
+}
+
+/* διαφορα font που θα χρησιμοποιηθουν σε ολες τις σελιδες */
+
+@font-face {
 
     font-family: 'roboto-light';
     src: url(/fonts/Roboto-Light.ttf);
-    
+
 }
 
 
@@ -32,7 +33,7 @@
 .grid-container {
 
     display: grid;
-    
+
     grid-auto-rows: auto;
     grid-auto-columns: auto;
 
@@ -44,9 +45,10 @@
     grid-row: 1/2;
 }
 
-.main-item {                                /* εδω εχουμε φτιαξει με grid layout τα 3 σημεια καθε σελιδας ...header , main και footer */
-                                            /* δηλαδη το που ξεκιναει και τελειωνει το καθε απο τα 3 μερη */
-    grid-column: 1/4;   
+.main-item {
+    /* εδω εχουμε φτιαξει με grid layout τα 3 σημεια καθε σελιδας ...header , main και footer */
+    /* δηλαδη το που ξεκιναει και τελειωνει το καθε απο τα 3 μερη */
+    grid-column: 1/4;
     grid-row: 2/4;
 }
 
@@ -68,7 +70,8 @@
 
 .header-light-color {
     background-color: #5680e9;
-    text-align: center;                 /* εχουμε βαλει χρωμα για background και μερικα margin ωστε να πηγαινει η φωτο στο κεντρο */
+    text-align: center;
+    /* εχουμε βαλει χρωμα για background και μερικα margin ωστε να πηγαινει η φωτο στο κεντρο */
     margin-top: -50px;
     margin-left: -10px;
     margin-right: -10px;
@@ -80,7 +83,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #84ceeb;          /* display flex ωστε να ειναι το καθε κουμπι ενα τετραγωνακι, justify και align center ωστε να ειναι κεντρο ολα τα κουμπια του μενου , line height για να ειναι λιγο πιο ψηλα και βαλαμε και @font-face roboto ως font */
+    background-color: #84ceeb;
+    /* display flex ωστε να ειναι το καθε κουμπι ενα τετραγωνακι, justify και align center ωστε να ειναι κεντρο ολα τα κουμπια του μενου , line height για να ειναι λιγο πιο ψηλα και βαλαμε και @font-face roboto ως font */
     float: none;
     line-height: 28px;
 }
@@ -89,26 +93,31 @@
 
 .navigation a {
     color: black;
-    font-size: 18px;                       /* αλλαγη στο χρωμα του font και βγαλαμε το underline απο τα link ωστε να φαινεται πιο ωραιο ,  τα καναμε bold */
+    font-size: 18px;
+    /* αλλαγη στο χρωμα του font και βγαλαμε το underline απο τα link ωστε να φαινεται πιο ωραιο ,  τα καναμε bold */
     text-decoration: none;
     padding: 14px 12px;
     font-weight: bold;
 }
 
 .navigation a:visited {
-    text-decoration: none;              /* να μην αλλαζει το χρωμα αν τα εχουμε ηδη πατησει / επισκευθει */
+    text-decoration: none;
+    /* να μην αλλαζει το χρωμα αν τα εχουμε ηδη πατησει / επισκευθει */
 }
 
 .navigation a:hover {
-    background-color: #2ea8d9;       /* χρωμα του καθε "κουμπιου" απο το μενου οταν κανεις hover με το ποντικι */
+    background-color: #2ea8d9;
+    /* χρωμα του καθε "κουμπιου" απο το μενου οταν κανεις hover με το ποντικι */
 }
 
-.navigation a:active {                  /* χρωμα που παιρνει το font οταν πατας το συγκεκριμενο link */
+.navigation a:active {
+    /* χρωμα που παιρνει το font οταν πατας το συγκεκριμενο link */
     color: grey;
 }
 
 
-.navigation .active {                   /* χρωμα που παινρει το καθε κουμπι οταν ειναι ενεργο , δηλαδη εισαι στην συγκεκριμενη σελιδα */
+.navigation .active {
+    /* χρωμα που παινρει το καθε κουμπι οταν ειναι ενεργο , δηλαδη εισαι στην συγκεκριμενη σελιδα */
     background-color: #2ea8d9;
 }
 
@@ -119,7 +128,8 @@
 /* !!!!!!!!!!!!!!!! INDEX !!!!!!!!!!!!!!! */
 
 body {
-    background-color: #badff1;                /* χρωμα για background του main περιεχομενου , font για το περιεχομενο επισης και overflow ωστε να μην υπαρχει η οριζοντια μπαρα scroll */
+    background-color: #badff1;
+    /* χρωμα για background του main περιεχομενου , font για το περιεχομενο επισης και overflow ωστε να μην υπαρχει η οριζοντια μπαρα scroll */
     font-family: roboto;
     font-size: 18px;
     overflow-y: scroll;
@@ -129,11 +139,13 @@ body {
 
 
 .welcome {
-    text-align: center;      /* κειμενο κεντραρισμενο */
+    text-align: center;
+    /* κειμενο κεντραρισμενο */
 }
 
-.main-content> p {
-    font-family: roboto-regular;          /* bold font και αλλαξαμε το font size να ειναι λιγο μικροτερο */
+.main-content>p {
+    font-family: roboto-regular;
+    /* bold font και αλλαξαμε το font size να ειναι λιγο μικροτερο */
     text-align: center;
     font-weight: 500;
     margin-left: 200px;
@@ -141,10 +153,11 @@ body {
 }
 
 .section-promote {
-    
+
     font-family: roboto-regular;
     text-align: center;
-    border: 2px solid #6ab1d4;              /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
+    border: 2px solid #6ab1d4;
+    /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -152,22 +165,24 @@ body {
     margin-right: 150px;
 }
 
-.product > a > img {
-    border: 2px solid #2ea8d9;              /* border και background για τις εικονες , radius για να γινουν πιο rounded τα edges */
+.product>a>img {
+    border: 2px solid #2ea8d9;
+    /* border και background για τις εικονες , radius για να γινουν πιο rounded τα edges */
     background-color: #6ab1d4;
     border-radius: 25px;
 }
 
 
 
-.product > a {
+.product>a {
 
-    text-decoration: none;          /* για να μην φαινονται τα λινκ underline */ 
+    text-decoration: none;
+    /* για να μην φαινονται τα λινκ underline */
 }
 
 
 .prod-photos {
-                                                /* ωστε οι φωτογραφιες των προιοντων να γινοναι με flex και direction row ωστε να ειναι απο αριστερα προς τα δεξια */
+    /* ωστε οι φωτογραφιες των προιοντων να γινοναι με flex και direction row ωστε να ειναι απο αριστερα προς τα δεξια */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -175,7 +190,8 @@ body {
 
 #slim {
 
-    padding-left: 40px;                  /* μια απο τις εικονες ειναι πιο μικρη αποτι πρεπει και ετσι κανουμε το τετραγωνο της ισο με των αλλων εικωνων */
+    padding-left: 40px;
+    /* μια απο τις εικονες ειναι πιο μικρη αποτι πρεπει και ετσι κανουμε το τετραγωνο της ισο με των αλλων εικωνων */
     padding-right: 40px;
 }
 
@@ -188,55 +204,63 @@ body {
 /* !!!!!!!!!!!!!!!!!!!! PRODUCT-CATEGORIES !!!!!!!!!!!!!!!!!! */
 
 .subcategory {
-    border: 2px solid #6ab1d4;           
-    box-shadow: 0px 2px 16px #6ab1d4;    /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
+    border: 2px solid #6ab1d4;
+    box-shadow: 0px 2px 16px #6ab1d4;
+    /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
     margin-top: 20px;
     margin-bottom: 30px;
     margin-left: 270px;
     margin-right: 270px;
 }
 
-.subcategory > ul {
+.subcategory>ul {
 
-    display: flex;                          /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */ 
+    display: flex;
+    /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-top: 15px;
     padding-right: 50px;
 }
 
-.subcategory > ul > li {
-                                        /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
+.subcategory>ul>li {
+    /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
     flex: 0 0 33.333333%;
 }
 
 .category-card {
-   list-style-type: none;             /* βγαλαμε τα bullet απο τα li της ul */
+    list-style-type: none;
+    /* βγαλαμε τα bullet απο τα li της ul */
 }
 
 
 .category-name {
-    word-break: break-all;              /* για να σπανε οι λεξεις και να πηγαινουν απο κατω αμα δεν χωρανε */
+    word-break: break-all;
+    /* για να σπανε οι λεξεις και να πηγαινουν απο κατω αμα δεν χωρανε */
 }
 
 
 a {
-    text-decoration: none;              /* κανενα underline για λινκ και χρωμα μαυρο */
+    text-decoration: none;
+    /* κανενα underline για λινκ και χρωμα μαυρο */
     color: black;
 }
 
 a:visited {
-    text-decoration: none;      /* οτι εχουμε πει παραπανω */
+    text-decoration: none;
+    /* οτι εχουμε πει παραπανω */
 }
 
 a:active {
-    color: grey;               /* ομοιως */
+    color: grey;
+    /* ομοιως */
 }
 
 
 .popular-products {
     font-family: roboto-regular;
-    border: 2px solid #6ab1d4;                  /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
+    border: 2px solid #6ab1d4;
+    /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -244,9 +268,10 @@ a:active {
     margin-right: 270px;
 }
 
-.popular-products > ul {
+.popular-products>ul {
 
-    display: flex;                          /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */ 
+    display: flex;
+    /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-top: 15px;
@@ -254,13 +279,14 @@ a:active {
 
 }
 
-.popular-products > ul > li {
-                                        /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
+.popular-products>ul>li {
+    /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
     flex: 0 0 33.333333%;
 }
 
 .product-card {
-    list-style-type: none;          /* βγαλαμε τα bullet απο τα li της ul */
+    list-style-type: none;
+    /* βγαλαμε τα bullet απο τα li της ul */
 }
 
 
@@ -269,99 +295,103 @@ a:active {
 
 
 
-/* !!!!!!!!!!!!!!!!!! PRODUCTS-PCS !!!!!!!!!!!!!!!!!!! */
-/* !!!!!!!!!!!!!!!!!! PRODUCT-PHONES !!!!!!!!!!!!!!!!! */
-
+/* !!!!!!!!!!!!!!!!!! PRODUCTS-PCS & PRODUCT-PHONES !!!!!!!!!!!!!!!!! */
 .products {
-
-    font-family: roboto;    /* ενιαιο font */
+    font-family: roboto;
+    /* Αλλάζουμε την γραμματοσειρά */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
 }
 
 .products .product-card {
-    
-    box-shadow: 0 15px 30px 1px grey;           /* σκια γυρω γυρω και margin ωστε να φαινεται ωραιο */
-    background: rgba(255, 255, 255, 0.90);
     text-align: center;
+    /* Μεταφέρουμε το αντικείμενο στο κέντρο */
+    box-shadow: 0 15px 30px 1px grey;
+    background: rgba(255, 255, 255, 0.90);
     border-radius: 5px;
+    /* Βάζουμε σκίαση γύρω από το αντικείμενο */
     overflow: hidden;
     margin: 5em auto;
     height: 350px;
     width: 700px;
+    /* Καθορίζουμε το μέγεθος κάθε αντικειμένου */
 }
 
 .product-details {
-    position: relative;         /* το αριστερο μισο του καθε product-card, ονομα προϊοντος και φτιαξιμο οπτικα με margin / float */
+    position: relative;
     text-align: left;
+    /* Μεταφέρουμε την ενότητα στα αριστερά */
     overflow: hidden;
     padding: 30px;
     height: 100%;
     float: left;
     width: 40%;
+    /* Καθορίζουμε το μέγεθος του κειμένου */
 }
 
 .product-details h1 {
-
-    display: inline-block;              /* αλλαγη χρωματος font κλπ ωστε να φαινεται μεσα στο product-card το h1 ωραιο */
+    display: inline-block;
     position: relative;
     font-size: 30px;
     color: #344055;
-    margin: 0;
+    /* Αλλάζουμε το μέγεθος και το χρώμα της γραμματοσειράς */
 }
 
-
-
-.product-details > p {
-    font-family: roboto-regular;  /* αλλαγη γραμματοσειρας, μεγεθους και χρωματος για ελληνικα */
-    text-align: center;
+.product-details>p {
+    font-family: roboto-regular;
     font-size: 18px;
     color: #7d7d7d;
-    
+    /* Αλλάζουμε την γραμματοσειρά, το μέγεθος και το χρώμα της */
+    text-align: center;
+    /* Μεταφέρουμε το κείμενο στο κέντρο */
 }
 
-
-
 .control {
-    position: absolute;             /* control και button ειναι για το κουμπι καλαθι αγορας με την τιμη πανω */
+    position: absolute;
     bottom: 20%;
     left: 22.8%;
-    
+    /* Αλλάζουμε το μέγεθος της εικόνας, προκειμένου να zoomάρεται */
 }
 
 .button {
-    transform: translateY(0px);
-    transition: 0.3s linear;
+    color: #eee;
+    /* Αλλάζουμε το χρώμα της γραμματοσειράς */
     background: #809fff;
+    /* Βάζουμε χρώμα στο κουμπί */
     border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
     outline: none;
     border: none;
-    color: #eee;
+    /* Διαμορφώνουμε το σχήμα του κουμπιού */
     padding-top: 0px;
     margin-left: 35px;
+    transform: translateY(0px);
+    /* Μετατοπίζουμε το κουμπί προς τα πάνω όταν δεν γίνεται hover */
+    transition: 0.3s linear;
+    /* Ρυθμίζουμε το unhover effect σε ομαλή αλλαγή */
+    position: relative;
+    overflow: hidden;
 }
 
 .button:hover {
     transform: translateY(-6px);
+    /* Μετατοπίζουμε το κουμπί προς τα πάνω όταν γίνεται hover */
     background: #1a66ff;
+    /* Αλλάζουμε το χρώμα του κουμπιού όταν γίνεται hover */
 }
 
 .button span {
     font-family: roboto-regular;
+    /* Αλλάζουμε την γραμματοσειρά */
     transition: transform 0.3s;
+    /* Ρυθμίζουμε το unhover effect σε ομαλή αλλαγή */
     display: inline-block;
     padding: 10px 20px;
     font-size: 1.2em;
     margin: 0;
 }
 
-.button .price,
-.shopping-cart {
+.button .price {
     background: #333;
     border: 0;
     margin: 0;
@@ -369,57 +399,40 @@ a:active {
 
 .button .price {
     transform: translateX(-10%);
+    /* Μετατοπίζουμε την τιμή όταν δεν γίνεται hover */
     padding-right: 15px;
 }
 
-.button .shopping-cart {
-    transform: translateX(-100%);
-    position: absolute;
-    background: #333;
-    z-index: 1;
-    left: 0;
-    top: 0;
-}
-
 .button .buy {
-    z-index: 3;
     font-weight: bolder;
-}
-
-.button:hover .price {
-    transform: translateX(-110%);
-}
-
-.button:hover .shopping-cart {
-    transform: translateX(0%);
 }
 
 .product-image {
     transition: all 0.3s ease-out;
+    /* Ρυθμίζουμε το unhover effect σε ομαλή αλλαγή */
     position: relative;
     overflow: hidden;
     height: 100%;
     float: right;
     width: 45%;
-   
 }
 
 .product-image .image {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
-
 
 .info {
     background: rgba(27, 26, 26, 0.9);
     font-family: roboto-light;
+    /* Αλλάζουμε την γραμματοσειρά */
     transition: all 0.3s ease-out;
     transform: translateX(-100%);
     position: absolute;
     line-height: 1.8;
     text-align: left;
+    /* Μεταφέρουμε το αντικείμενο στα αριστερά */
     font-size: 105%;
-    cursor: no-drop;
     color: #FFF;
     height: 100%;
     width: 100%;
@@ -433,38 +446,34 @@ a:active {
 
 .product-image:hover .info {
     transform: translateX(0);
+    /* Ρυθμίζουμε το κείμενο να μετατοπίζεται αριστερά όταν γίνεται hover η εικόνα */
 }
 
 .info ul li {
     transition: 0.3s ease;
+    /* Ρυθμίζουμε το hover effect του κειμένου σε ομαλή αλλαγή */
 }
 
 .info ul li:hover {
     transform: translateX(50px) scale(1.3);
+    /* Ρυθμίζουμε το κείμενο να μεγεθύνεται όταν γίνεται hover */
 }
 
 .product-image:hover img {
     transition: all 0.3s ease-out;
-}
-
-.product-image:hover img {
     transform: scale(1.2, 1.2);
+    /* Ρυθμίζουμε το hover effect σε ομαλή αλλαγή */
 }
-
-
-/* !!!!!!!!!!!!! ΤΕΛΟΣ PRODUCT-PCS !!!!!!!!!!!!!!!!! */
-/* !!!!!!!!!!!!! ΤΕΛΟΣ PRODUCT-PHONES !!!!!!!!!!!!!! */
-
-
 
 /* !!!!!!!!!!!!!!! PRODUCT-IPHONE14 !!!!!!!!!!!!!!!! */
 
-#category > a {                    
+#category>a {
     color: black;
     text-decoration: none;
 }
 
-#iphone-name, #category {
+#iphone-name,
+#category {
     text-align: left;
 }
 
@@ -481,7 +490,7 @@ a:active {
 }
 
 
-.iphone-code-price{
+.iphone-code-price {
 
     display: block;
     float: left;
@@ -508,8 +517,9 @@ a:active {
     padding-left: 10px;
 }
 
-.outer-box {    
-    margin-top: -15px;           /* ωστε να κατεβει και να αρχιζει στο ιδιο υψος το κουτι χαρακτηριστικων με το κουτι της εικονας του κινητου */
+.outer-box {
+    margin-top: -15px;
+    /* ωστε να κατεβει και να αρχιζει στο ιδιο υψος το κουτι χαρακτηριστικων με το κουτι της εικονας του κινητου */
 }
 
 .manifacturer {
@@ -599,7 +609,8 @@ a:active {
 
 input,
 label {
-    cursor: pointer;            /* pointer that indicates to a link */
+    cursor: pointer;
+    /* pointer that indicates to a link */
 }
 
 input[type="radio"] {
@@ -636,7 +647,9 @@ label {
 @keyframes outline-checked {
     0% {
         outline-offset: 0;
-    }                               /* ολο αυτο ειναι animation για τα radio buttons οταν τα πατας */
+    }
+
+    /* ολο αυτο ειναι animation για τα radio buttons οταν τα πατας */
 
     100% {
         outline-offset: -0.2rem;
@@ -658,7 +671,7 @@ label {
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
-   
+
 }
 
 .vathmologia-asteria {
@@ -696,10 +709,10 @@ input[type=submit]:hover {
     align-items: center;
     width: 100%;
     height: 100vh;
-    
+
 }
 
-iframe{
+iframe {
 
     width: 70%;
     height: 500px;
@@ -707,8 +720,8 @@ iframe{
 
 .katasthmata>h3 {
     text-decoration: underline;
-   
-   
+
+
 }
 
 
@@ -844,12 +857,12 @@ select {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-bottom: 30px;
-    margin-left: 20px;  
+    margin-left: 20px;
     margin-right: 20px;
     text-align: left;
 }
 
-.perilhpsh > p {
+.perilhpsh>p {
     font-family: roboto-regular;
     padding-left: 20px;
     padding-right: 20px;
@@ -868,7 +881,7 @@ select {
     padding-right: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
-   
+
 
 }
 
@@ -894,9 +907,9 @@ select {
 
 
 .footer-content {
-   
+
     font-family: roboto-light;
-    background-color: #5680e9;      
+    background-color: #5680e9;
     text-align: center;
     margin-top: 50px;
     margin-bottom: -10px;
@@ -912,15 +925,17 @@ select {
     font-family: roboto;
 }
 
-.footer-content > a {
-    
+.footer-content>a {
+
     text-decoration: none;
 }
 
 .footer-content>a>img {
     filter: grayscale(100%);
     border-radius: 25px;
-}                                        /* ασπρομαυρες φωτο μεχρι να κανουμε hover και να φυγει το greyscale εφε */
+}
+
+/* ασπρομαυρες φωτο μεχρι να κανουμε hover και να φυγει το greyscale εφε */
 
 .footer-content>a>img:hover {
     filter: grayscale(0%);
