--- a/Exercise5/css/style.css
+++ b/Exercise5/css/style.css
@@ -23,29 +23,12 @@
     grid-template-rows: 0.2fr 2fr 0.2fr;
     width: 100vw;
     height: 100vh;
-<<<<<<< Updated upstream
-    
-=======
-<<<<<<< HEAD
 
-=======
-    
->>>>>>> ef33d663882835e4c436c0deea826aee9b365261
->>>>>>> Stashed changes
 }
 
 .header-item {
     grid-column: 1/4;
     grid-row: 1/2;
-<<<<<<< Updated upstream
-    
-=======
-<<<<<<< HEAD
-
-=======
-    
->>>>>>> ef33d663882835e4c436c0deea826aee9b365261
->>>>>>> Stashed changes
 }
 
 .main-item {
@@ -1007,11 +990,12 @@ select {
 
 
 @media only screen and (max-width: 1058px) {
-    
 
-    .navigation  a{
 
-        font-size: 16px;                /* μικροτερο font για να χωραει το menu bar */
+    .navigation a {
+
+        font-size: 16px;
+        /* μικροτερο font για να χωραει το menu bar */
     }
 
 }
@@ -1036,17 +1020,18 @@ select {
 
 
 @media only screen and (max-width: 965px) {
-    
+
 
     .navigation {
 
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;                     /* αλλαγη του format του nav menu */
-        
+        justify-content: center;
+        /* αλλαγη του format του nav menu */
+
     }
 
-    
+
 
 }
 
