--- a/Exercise3/css/style.css
+++ b/Exercise3/css/style.css
@@ -2,7 +2,8 @@
 
 @font-face {
     font-family: 'roboto';
-    src: url(/fonts/Roboto-Bold.ttf);
+    src: url(../../fonts/Roboto-Bold.ttf), 
+        local(Roboto-Bold);
 
 
 }
@@ -10,7 +11,9 @@
 @font-face {
 
     font-family: 'roboto-regular';
-    src: url(/fonts/Roboto-Regular.ttf);
+    src: url(../../fonts/Roboto-Regular.ttf), 
+        local(Roboto-Regular)
+   
 
 }
 
@@ -19,7 +22,9 @@
 @font-face {
 
     font-family: 'roboto-light';
-    src: url(/fonts/Roboto-Light.ttf);
+    src: url(../../fonts/Roboto-Light.ttf),
+        local(Roboto-Light)
+   
 
 }
 
