--- a/Exercise4/css/style.css
+++ b/Exercise4/css/style.css
@@ -2,7 +2,8 @@
 
 @font-face {
     font-family: 'roboto';
-    src: url(/fonts/Roboto-Bold.ttf);
+    src: url(../../fonts/Roboto-Bold.ttf), 
+        local(Roboto-Bold);
 
 
 }
@@ -10,7 +11,8 @@
 @font-face {
 
     font-family: 'roboto-regular';
-    src: url(/fonts/Roboto-Regular.ttf);
+    src: url(../../fonts/Roboto-Regular.ttf), 
+        local(Roboto-Regular)
 
 }
 
@@ -18,8 +20,8 @@
 @font-face {
 
     font-family: 'roboto-light';
-    src: url(/fonts/Roboto-Light.ttf);
-
+    src: url(../../fonts/Roboto-Light.ttf),
+        local(Roboto-Light)
 }
 
 
